salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/Tax_Exemption_Certificate__c.object-meta.xml
<CustomObject>
    <!-- Exemption id, organisation, status and how long it has been outstanding -
         what somebody triaging the pending list needs without opening the record. -->
    <description>A Kentucky Form 51A126 purchase exemption certificate captured from a buyer. Evidence for every order that was not charged sales tax. Stored against the Account so a repeat buyer is not asked twice, and never deleted while an order relies on it.</description>
    <label>Tax Exemption Certificate</label>
    <nameField>
        <displayFormat>TEC-{00000}</displayFormat>
        <label>Certificate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Exemption Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>