salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Certificate_File_Attached__c.field-meta.xml
<CustomField>
    <fullName>Certificate_File_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the buyer uploaded a scan of their signed 51A126, which lands in Files on this record. The upload is optional: the captured fields are themselves a certificate in electronic form, and the scan is corroboration rather than the thing itself.</description>
    <inlineHelpText>Ticked when a scanned 51A126 is in Files on this record.</inlineHelpText>
    <label>Certificate File Attached</label>
    <type>Checkbox</type>
</CustomField>