salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding__c</fullName>
    <description>How long a claimed exemption has gone without a finished certificate. Zero once the certificate is Complete, Rejected or Expired - only Pending accrues. Kentucky allows a seller ninety days to obtain a certificate, and this is the number that says how much of that is left.</description>
    <formula>IF(AND(ISPICKVAL(Status__c, "Pending"), NOT(ISBLANK(First_Claimed_On__c))), TODAY() - First_Claimed_On__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days a Pending certificate has been outstanding. Zero once it is resolved.</inlineHelpText>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>