salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Exemption_Id__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Id__c</fullName>
    <description>The exemption authorisation number the purchaser wrote on their 51A126 - the number the Department of Revenue issued them. Unique, so one organisation cannot end up with two certificate records, and an external id so a repeat order updates the certificate it already has instead of creating another.</description>
    <externalId>true</externalId>
    <inlineHelpText>The exemption number from the buyer's 51A126. One record per number.</inlineHelpText>
    <label>Exemption ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>