salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/First_Claimed_On__c.field-meta.xml
<CustomField>
    <fullName>First_Claimed_On__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date exemption was first claimed under this number. The clock for Days Outstanding runs from here, not from the record's created date, so a certificate re-saved or re-opened later does not quietly reset its own age.</description>
    <inlineHelpText>When exemption was first claimed. Days Outstanding counts from here.</inlineHelpText>
    <label>First Claimed On</label>
    <type>Date</type>
</CustomField>