salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Anything staff need to record about this certificate - who was chased, what the Department of Revenue said, why it was rejected.</description>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>