salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <description>The purchaser's name exactly as it was typed on the certificate. Kept as free text alongside the Account lookup because the certificate has to record what the buyer attested to, not what somebody later decided the account should be called.</description>
    <inlineHelpText>The purchaser name as the buyer typed it on the certificate.</inlineHelpText>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>