salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <description>Which basis for exemption the purchaser claimed on Form 51A126. The form asks the buyer to identify themselves as one of these, and the answer is part of what makes the certificate a certificate rather than an assertion that tax does not apply.</description>
    <inlineHelpText>The basis for exemption the buyer claimed on their 51A126.</inlineHelpText>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Resident nonprofit educational institution</fullName><default>false</default><label>Resident nonprofit educational institution</label></value>
            <value><fullName>Resident nonprofit charitable institution</fullName><default>false</default><label>Resident nonprofit charitable institution</label></value>
            <value><fullName>Resident nonprofit religious institution</fullName><default>false</default><label>Resident nonprofit religious institution</label></value>
            <value><fullName>Government agency</fullName><default>false</default><label>Government agency</label></value>
            <value><fullName>Resale</fullName><default>false</default><label>Resale</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>