salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Past_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Past_90_Days__c</fullName>
    <description>The hard flag. Kentucky gives a seller ninety days to obtain an exemption certificate; past that the exemption is not supportable and the tax is the organisation's own to pay. A ticked box here is money at risk, not a reminder.</description>
    <formula>AND(ISPICKVAL(Status__c, "Pending"), NOT(ISBLANK(First_Claimed_On__c)), (TODAY() - First_Claimed_On__c) &gt; 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked once a Pending certificate is past Kentucky's ninety-day window.</inlineHelpText>
    <label>Past 90 Days</label>
    <type>Checkbox</type>
</CustomField>