salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <description>The signature as the signer typed it. Kept separate from Signer Name so the two can be compared: a certificate where they do not match is one worth a second look before the exemption is relied on.</description>
    <inlineHelpText>The signature as typed. Compare it against Signer Name.</inlineHelpText>
    <label>Signature</label>
    <length>121</length>
    <type>Text</type>
</CustomField>