salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <description>The date the signer put on the certificate. Recorded as given rather than stamped from the server clock, because it is part of what the buyer attested to.</description>
    <inlineHelpText>The date on the certificate, as the signer gave it.</inlineHelpText>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>