salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <description>The person who signed the certificate on the organisation's behalf. Form 51A126 is signed under penalty of perjury, so who signed it is the part that makes it enforceable.</description>
    <inlineHelpText>Who signed the certificate for the organisation.</inlineHelpText>
    <label>Signer Name</label>
    <length>121</length>
    <type>Text</type>
</CustomField>