salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Signer_Title__c</fullName>
    <description>The signer's role in the organisation. Form 51A126 asks for it because the certificate is only good if the person signing had the authority to.</description>
    <inlineHelpText>The signer's role - the 51A126 asks for it.</inlineHelpText>
    <label>Signer Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>