salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the certificate was captured - which form, or which staff member keyed it in. Worth knowing when a batch of certificates turns out to share a problem.</description>
    <inlineHelpText>Where this certificate came from.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>