salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Complete is the only status that justifies an untaxed Kentucky order. Pending means exemption was claimed but the certificate is not finished - those orders were taxed. Rejected means it was reviewed and does not hold. Expired means it once did and no longer does.</description>
    <inlineHelpText>Only Complete justifies an untaxed Kentucky order.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Complete</fullName><default>false</default><label>Complete</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>