salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/validationRules/Complete_Needs_A_Certificate.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Needs_A_Certificate</fullName>
    <active>true</active>
    <description>Complete is the status that lets an order go untaxed, so it cannot be set without the parts that make a 51A126 a certificate: the exemption number, the purchaser, who signed it and when.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Complete"),
  OR(
    ISBLANK(Exemption_Id__c),
    ISBLANK(Organization_Name__c),
    ISPICKVAL(Organization_Type__c, ""),
    ISBLANK(Signer_Name__c),
    ISBLANK(Signature__c),
    ISBLANK(Signed_Date__c)
  )
)</errorConditionFormula>
    <errorMessage>A Complete certificate needs an exemption ID, organization name, organization type, signer name, signature and signed date. Leave it Pending until you have all six.</errorMessage>
</ValidationRule>