salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/listViews/All_Certificates.listView-meta.xml
<ListView>
    <fullName>All_Certificates</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Exemption_Id__c</columns>
    <columns>Organization_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Signed_Date__c</columns>
    <columns>Certificate_File_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Certificates</label>
</ListView>