salesforce/force-app/main/default/objects/Tax_Exemption_Certificate__c/listViews/Pending_Certificates.listView-meta.xml
<ListView>
    <fullName>Pending_Certificates</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Exemption_Id__c</columns>
    <columns>First_Claimed_On__c</columns>
    <columns>Days_Outstanding__c</columns>
    <columns>Past_90_Days__c</columns>
    <columns>Certificate_File_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Certificates</label>
</ListView>